partially fixed sidebar visibility

--- a/style.css
+++ b/style.css
@@ -6,22 +6,16 @@
   
 }
 
+
+
 .container {
   max-width: 80vw;
   margin: 0 10vw;
-  overflow-x: hidden;
-  overflow-y: hidden;
+ 
+
 }
 
-.container::-webkit-scrollbar {
-  display: none;
-}
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.container {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
 
 nav {
   background: rgb(245, 246, 250);
@@ -48,7 +42,7 @@ nav {
   width: 35vw;
   height: 8vh;
 
-  overflow: visible;
+  overflow: hidden;
 }
 
 .nav-links li {
@@ -57,6 +51,7 @@ nav {
   padding: 4px 4px;
   margin-top: auto;
 }
+
 
 li a {
   text-decoration: none;
@@ -157,6 +152,8 @@ body , html {
   background: rgb(236, 137, 8);
 }
 
+
+
 @media screen and (max-width: 500px) {
   main {
     margin: 0px auto;
@@ -196,7 +193,10 @@ body , html {
 }
 
 @media screen and (max-width: 800px) {
+
   .nav-links {
+   
+   display: none;
     position: absolute;
     right: 0px;
     top: 10vh;
@@ -204,12 +204,13 @@ body , html {
     width: 50vw;
     background: rgb(245, 246, 250);
     flex-direction: column;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    
   }
 
   .nav-active {
-    transform: translateX(0%);
+    
+   
+    display:flex;
   }
 
   .nav-links a {
@@ -226,7 +227,8 @@ body , html {
 
   
 
-  .container {
+  .container  {
+    
     max-width: 90vw;
     margin: 0 5vw;
   }
